deploy/050-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trustify-dumps-serve
  labels:
    app.kubernetes.io/name: trustify-dumps-serve
    app.kubernetes.io/component: serve
    app.kubernetes.io/part-of: trustify-dumps
spec:
  ports:
    - name: endpoint
      port: 8080
      protocol: TCP
      targetPort: endpoint
  selector:
    app.kubernetes.io/name: trustify-dumps-serve
    app.kubernetes.io/component: serve
    app.kubernetes.io/part-of: trustify-dumps
  type: ClusterIP
